# SpectralSVR

./: .gitignore  README.md  pyproject.toml
SpectralSVR/: __init__.py
SpectralSVR/basis/: FourierBasis.py  SphericalBasis.py  __base.py  __init__.py
SpectralSVR/model/: FNN.py  LSSVR.py  SpectralSVR.py  __base.py  __init__.py
SpectralSVR/problems/: __base.py  __init__.py  antiderivative.py  burgers.py
SpectralSVR/utils/: __init__.py
model/: LSSVR.py  SpectralLSSVR.py  basis.py  pyproject.toml  utils.py
notebooks/: 1d_basis.ipynb  analyze_results.ipynb  memory_test.ipynb  multidim_basis.ipynb  solver.ipynb  solver1.ipynb  spectralsvr.ipynb  spectralsvr_2d ls_coeff.ipynb  spectralsvr_2d.ipynb  spectralsvr_coeff.ipynb  spectralsvr_hf_lf.ipynb  spectralsvr_inv.ipynb  spectralsvr_wave2d.ipynb  svr_benchmark.ipynb  test.ipynb  utils.py
notebooks/cases/antiderivative/: antiderivative.ipynb
notebooks/cases/burgers/: burgers.ipynb
notebooks/cases/burgers_comparison/: burgers.ipynb
notebooks/cases/burgers_new/: test_burgers.ipynb
notebooks/cases/comparison/: burgers.ipynb
notebooks/cases/fnn_comparison/: fnn_burgers.ipynb  fnn_test.ipynb
notebooks/cases/weatherbench2/: test.ipynb  weatherbench2-scenario-3.ipynb
skripsi_program/: __init__.py
skripsi_program/basis/: ChebyshevBasis.py  FourierBasis.py  SphericalBasis.py  WaveletBasis.py  __base.py  __init__.py
skripsi_program/model/: LSSVR.py  SpectralLSSVR.py  SpectralSVR.py  __init__.py
skripsi_program/problems/: __base.py  __init__.py  antiderivative.py  burgers.py
skripsi_program/utils/: __init__.py  fourier.py
tests/basis/: basis_test.py  test_basis.py
tests/model/: SpectralLSSVR_test.py  test_SpectralSVR.py
tests/utils/: fourier_test.py  test_fourier.py  test_utils.py
