[tool.poetry]
name = "skripsi-program"
version = "0.8.8"
description = ""
authors = ["nidduzzi <74892632+nidduzzi@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "skripsi_program"}]

[tool.poetry.dependencies]
python = "^3.10.6"
numpy = "^1.24.0"
tqdm = "^4.65.0"
jaxtyping = "^0.2.20"
pandas = "^2.2.2"
torchmetrics = "^1.4.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
torch = {version = "^2.4.1+cu124", source = "pytorch-gpu"}
torchvision = {version = "^0.19.1+cu124", source = "pytorch-gpu"}
torchaudio = {version = "^2.4.1+cu124", source = "pytorch-gpu"}
ray = {extras = ["tune"], version = "^2.37.0"}
hyperopt = "^0.2.7"
ipywidgets = "^8.1.5"
torchdiffeq = "^0.2.4"
xarray = "^2024.10.0"
zarr = "^2.18.3"
gcsfs = "^2024.10.0"
pyqt6 = "^6.8.0"

[tool.poetry.group.dev.dependencies]
types-tqdm = "^4.65.0.1"
pytest = "^8.2.2"
ipykernel = "^6.29.4"
black = "^24.4.2"
mypy = "^1.10.0"
ruff = "^0.4.9"
memory-profiler = "^0.61.0"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
