[project]
name = "skripsi-program"
version = "0.9.3"
description = ""
requires-python = ">=3.10,<3.11"
dependencies = [
    "gcsfs>=2024.6.1",
    "hyperopt>=0.2.7",
    "ipywidgets>=8.1.5",
    "jaxtyping>=0.2.20",
    "matplotlib~=3.7.5",
    "numpy>=1.24.0",
    "pandas>=2.2.2",
    "pyqt6>=6.8.0",
    "ray[tune]>=2.37.0",
    "scikit-learn>=1.5.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchdiffeq>=0.2.4",
    "torchmetrics>=1.0.3",
    "torchvision>=0.19.1",
    "tqdm>=4.65.0",
    "xarray>=2024.10.0",
    "zarr>=2.18.3",
]
authors = [{ name = "nidduzzi", email = "74892632+nidduzzi@users.noreply.github.com" }]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "ipykernel>=6.29.4",
    "memory-profiler>=0.61.0",
    "mypy>=1.10.0",
    "pytest>=8.2.2",
    "ruff>=0.12.0",
    "types-tqdm>=4.65.0.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["SpectralSVR"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
