[project]
name = "spectralsvr"
version = "0.9.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "torch>=2.8.0",
    "torchdiffeq>=0.2.5",
    "torchmetrics>=1.8.1",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
authors = [{ name = "nidduzzi", email = "74892632+nidduzzi@users.noreply.github.com" }]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.30.1",
    "ray[tune]>=2.49.0",
    "hyperopt>=0.2.7",
    "xarray>=2025.8.0",
    "zarr>=3.1.2",
    "gcsfs>=2025.7.0",
    "ipywidgets>=8.1.7",
    "scikit-learn>=1.7.1",
]

lint = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
test = [
    "memory-profiler>=0.61.0",
    "pytest>=8.4.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128"},
]
torchvision = [
  { index = "pytorch-cu128"},
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["SpectralSVR"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["torch.*", "numpy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "W", "C9", "PERF"]

[tool.ruff.format]
quote-style = "double"
